# arbuz-concierge

./: .dist.env  .gitignore  .pre-commit-config.yaml  alembic.ini  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250511_0026_521cee0dee32_init.py  20250518_1705_a67cdb4c03e7_product_dts.py  20250527_2204_42269c2787f5_product_emb.py
app/: __init__.py  config.py  embedder.py  llm.py  loader.py
app/db/models/: __init__.py  base.py  category.py  product_embedding.py  product_features.py  tg_chat.py
app/gpt/: embeddings.py  openai.py  productologist.py
app/schemas/: base.py  product.py
initdb/: marvin.sql
src/app/: __init__.py  config.py  loader.py
src/app/config/: settings.py
src/app/data/: categories.json
src/app/db/: __init__.py  session.py
src/app/db/models/: __init__.py  category.py  feature.py  product.py  product_category.py
src/app/gpt/: memory.py
src/app/schemas/: categories.py  product.py
